--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         </div>
 
         <div class="py-4 row">
-          <div class="col-lg-4 col-md-6 mt-4 gap-2 d-flex flex-column">
+          <div class="col-lg-4 col-md-6 mt-4 gap-4 gap-lg-2 d-flex flex-column">
             <div class="image-container h-100 position-relative overflow-hidden">
               <img src="assets/images/Rectangle 28.png" class="img-fluid rounded-2" alt="">
             </div>
@@ -274,7 +274,7 @@
               <img src="assets/images/Frame 1984078220.png" class="img-fluid rounded-2 h-100 object-fit-cover" alt="">
             </div>
           </div>
-          <div class="col-lg-4 col-md-12 mt-4 gap-2 d-flex flex-column">
+          <div class="col-lg-4 col-md-12 mt-4 gap-4 gap-lg-2 d-flex flex-column">
 
             <div class="card bg-light border-0 rounded-2 h-100">
               <div class="card-body">
