--- a/about.html
+++ b/about.html
@@ -236,17 +236,17 @@
               <!-- Image Cards with Vertical Stagger -->
               <div class="col-lg-6 d-flex justify-content-lg-center justify-content-center gap-3">
                 <div class="row">
-                  <div class="col-auto mt-5">
+                  <div class="col-4 mt-5">
                     <div class="rounded overflow-hidden shadow-sm about-img">
                       <img src="assets/images/img-03.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 1">
                     </div>
                   </div>
-                  <div class="col-auto mt-n3">
+                  <div class="col-4 mt-n3">
                     <div class="rounded overflow-hidden shadow-sm about-img">
                       <img src="assets/images/video-02.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 2">
                     </div>
                   </div>
-                  <div class="col-auto mt-n5">
+                  <div class="col-4 mt-n5">
                     <div class="rounded overflow-hidden shadow-sm about-img">
                       <img src="assets/images/img-02.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 3">
                     </div>
@@ -283,17 +283,17 @@
             <!-- Image Cards with Vertical Stagger -->
             <div class="col-lg-6 d-flex justify-content-lg-center justify-content-center gap-3">
               <div class="row">
-                <div class="col-auto mt-n5">
+                <div class="col-4 mt-n5">
                   <div class="rounded overflow-hidden shadow-sm about-img">
                     <img src="assets/images/img.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 1">
                   </div>
                 </div>
-                <div class="col-auto mt-n3">
+                <div class="col-4 mt-n3">
                   <div class="rounded overflow-hidden shadow-sm about-img">
                     <img src="assets/images/video.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 2">
                   </div>
                 </div>
-                <div class="col-auto mt-5">
+                <div class="col-4 mt-5">
                   <div class="rounded overflow-hidden shadow-sm about-img">
                     <img src="assets/images/img card.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 3">
                   </div>
