--- a/about.html
+++ b/about.html
@@ -235,7 +235,7 @@
           <div class="row align-items-center">
               <!-- Image Cards with Vertical Stagger -->
               <div class="col-lg-6 d-flex justify-content-lg-center justify-content-center gap-3">
-                <div class="row">
+                <div class="row px-3 px-md-0">
                   <div class="col-4 mt-5">
                     <div class="rounded overflow-hidden shadow-sm about-img">
                       <img src="assets/images/img-03.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 1">
@@ -282,7 +282,7 @@
       
             <!-- Image Cards with Vertical Stagger -->
             <div class="col-lg-6 d-flex justify-content-lg-center justify-content-center gap-3">
-              <div class="row">
+              <div class="row px-3 px-md-0">
                 <div class="col-4 mt-n5">
                   <div class="rounded overflow-hidden shadow-sm about-img">
                     <img src="assets/images/img.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 1">
