--- a/visas.html
+++ b/visas.html
@@ -153,7 +153,7 @@
       <section class="py-5 mb-5 mt-4 position-relative my-section">
           <!-- Left decorative plane image -->
           <div class="icon-wrapper position-absolute dir">
-            <img src="assets/images/plane vector.png" class="img-fluid plan-img" />
+            <img src="assets/images/plane vector.png" class="img-fluid plan-img flight-path" />
           </div>
         <div class="container mt-5 mt-md-4">
         <div class="heading">
