--- a/about.html
+++ b/about.html
@@ -234,8 +234,8 @@
         <div class="container">
           <div class="row align-items-center">
               <!-- Image Cards with Vertical Stagger -->
-              <div class="col-lg-6 d-flex justify-content-lg-center justify-content-center gap-3">
-                <div class="row px-3 px-md-0">
+              <div class="col-lg-6 d-flex justify-content-lg-center justify-content-center gap-md-3">
+                <div class="row">
                   <div class="col-4 mt-5">
                     <div class="rounded overflow-hidden shadow-sm about-img">
                       <img src="assets/images/img-03.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 1">
@@ -281,8 +281,8 @@
             </div>
       
             <!-- Image Cards with Vertical Stagger -->
-            <div class="col-lg-6 d-flex justify-content-lg-center justify-content-center gap-3">
-              <div class="row px-3 px-md-0">
+            <div class="col-lg-6 d-flex justify-content-lg-center justify-content-center gap-md-3">
+              <div class="row">
                 <div class="col-4 mt-n5">
                   <div class="rounded overflow-hidden shadow-sm about-img">
                     <img src="assets/images/img.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 1">
@@ -310,7 +310,7 @@
 
     <section class="py-5 position-relative my-section">
       <div class="icon-wrapper position-absolute dir">
-        <img src="assets/images/plane vector.png" class="img-fluid plan-img" />
+        <img src="assets/images/plane vector.png" class="img-fluid plan-img flight-path" />
       </div>
       <div class="container mt-7 mt-md-6">
         <div class="section-title text-center mt-5">
