--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
     <section class="py-5 position-relative my-section">
       <div class="icon-wrapper position-absolute dir">
-        <img src="assets/images/plane vector.png" class="img-fluid plan-img" />
+        <img src="assets/images/plane vector.png" class="img-fluid plan-img flight-path" />
       </div>
       <div class="container mt-7 mt-md-6">
         <div class="section-title text-center mt-5">
@@ -312,7 +312,7 @@
 
     <section class="py-5 position-relative my-section">
       <div class="icon-wrapper position-absolute">
-        <img src="assets/images/plane-vector.png" class="img-fluid plan-img" />
+        <img src="assets/images/plane-vector.png" class="img-fluid plan-img flight-path" />
       </div>
       <div class="container mt-7 mt-md-6">
         <div class="section-title text-center mt-5">
