--- a/about.html
+++ b/about.html
@@ -115,11 +115,11 @@
   </head>
   <body>
     <!-- loader -->
-    <!-- <div class="loader-bg">
+    <div class="loader-bg">
       <div class="">
-        <img src="assets/images/aeroplane-animation-download-in-lottie-json-gif-static-svg-file-formats--aircraft-airplane-flight-travel-pack-holidays-animations-4574201-ezgif.com-video-to-gif-converter.gif" alt="">
+        <img src="assets/images/airplane-loading.gif" width="300" alt="">
       </div>
-      </div> -->
+      </div>
     <!-- loader -->
 
       <!-- NavBar -->
