--- a/about.html
+++ b/about.html
@@ -117,7 +117,8 @@
     <!-- loader -->
     <div class="loader-bg">
       <div class="">
-        <img src="assets/images/airplane-loading.gif" width="300" alt="">
+        <img src="assets/images/airplane-animation-download-in-lottie-json-gif-static-svg-file-formats--aeroplane-airport-plane-flight-vehicle-animations-36873971-ezgif.com-video-to-gif-converter.gif" alt="">
+
       </div>
       </div>
     <!-- loader -->
