--- a/about.html
+++ b/about.html
@@ -115,12 +115,11 @@
   </head>
   <body>
     <!-- loader -->
-    <div class="loader-bg">
+    <!-- <div class="loader-bg">
       <div class="">
-        <img src="assets/images/airplane-animation-download-in-lottie-json-gif-static-svg-file-formats--aeroplane-airport-plane-flight-vehicle-animations-36873971-ezgif.com-video-to-gif-converter.gif" alt="">
-
+        <img src="assets/images/airplane-animation-download-in-lottie-json-gif-static-svg-file-formats--aeroplane-airport-plane-flight-vehicle-animations-36873971-ezgif.com-video-to-gif-converter.gif" width="300" alt="">
       </div>
-      </div>
+      </div> -->
     <!-- loader -->
 
       <!-- NavBar -->
