--- a/contact.html
+++ b/contact.html
@@ -272,7 +272,9 @@
               <!-- Phone Number -->
               <div class="col-lg-12 mb-4">
                 <label class="fw-500 mb-2" for="phone">رقم الهاتف</label>
+                <div class="phone-input" >
                 <input type="tel" class="form-control rounded-2 phone" placeholder="ادخل رقم الهاتف" name="phone" id="phone">
+              </div>
               </div>
 
               <!-- Message -->
