--- a/about.html
+++ b/about.html
@@ -236,17 +236,17 @@
               <!-- Image Cards with Vertical Stagger -->
               <div class="col-lg-6 d-flex justify-content-lg-center justify-content-center gap-md-3">
                 <div class="row">
-                  <div class="col-4 mt-5">
+                  <div class="col-4 mt-5" data-aos="zoom-in">
                     <div class="rounded overflow-hidden shadow-sm about-img">
                       <img src="assets/images/img-03.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 1">
                     </div>
                   </div>
-                  <div class="col-4 mt-n3">
+                  <div class="col-4 mt-n3" data-aos="zoom-in">
                     <div class="rounded overflow-hidden shadow-sm about-img">
                       <img src="assets/images/video-02.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 2">
                     </div>
                   </div>
-                  <div class="col-4 mt-n5">
+                  <div class="col-4 mt-n5" data-aos="zoom-in">
                     <div class="rounded overflow-hidden shadow-sm about-img">
                       <img src="assets/images/img-02.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 3">
                     </div>
@@ -256,8 +256,8 @@
               </div>
             <!-- Text Content -->
             <div class="col-lg-6 mb-lg-0 py-5 py-lg-0">
-              <h3 class="fw-bold text-dark fs-3">رؤيتنا</h3>
-              <p class="text-third fs-18">
+              <h3 class="fw-bold text-dark fs-3" data-aos="fade-up">رؤيتنا</h3>
+              <p class="text-third fs-18" data-aos="fade-up">
                 أن نصبح الخيار الأول للمسافرين في العالم العربي، وأن نكون رمزًا للثقة والتميز في مجال السياحة والسفر، عبر تقديم حلول مبتكرة وتجارب استثنائية تفوق التوقعات.
               </p>
             </div>
@@ -274,8 +274,8 @@
           <div class="row align-items-center">
             <!-- Text Content -->
             <div class="col-lg-6 mb-lg-0 py-5 py-lg-0">
-              <h3 class="fw-bold text-dark fs-3">رسالتنا</h3>
-              <p class="text-third fs-18">
+              <h3 class="fw-bold text-dark fs-3" data-aos="fade-up">رسالتنا</h3>
+              <p class="text-third fs-18" data-aos="fade-up">
                 نحن ملتزمون بتوفير خدمات سفر عالية الجودة بمعايير عالمية، مع الحرص على تقديم أفضل الأسعار، والاهتمام بالتفاصيل لضمان رحلة مريحة ومميزة لكل عميل.
               </p>
             </div>
@@ -283,17 +283,17 @@
             <!-- Image Cards with Vertical Stagger -->
             <div class="col-lg-6 d-flex justify-content-lg-center justify-content-center gap-md-3">
               <div class="row">
-                <div class="col-4 mt-n5">
+                <div class="col-4 mt-n5" data-aos="zoom-in">
                   <div class="rounded overflow-hidden shadow-sm about-img">
                     <img src="assets/images/img.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 1">
                   </div>
                 </div>
-                <div class="col-4 mt-n3">
+                <div class="col-4 mt-n3" data-aos="zoom-in">
                   <div class="rounded overflow-hidden shadow-sm about-img">
                     <img src="assets/images/video.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 2">
                   </div>
                 </div>
-                <div class="col-4 mt-5">
+                <div class="col-4 mt-5" data-aos="zoom-in">
                   <div class="rounded overflow-hidden shadow-sm about-img">
                     <img src="assets/images/img card.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Image 3">
                   </div>
@@ -314,7 +314,7 @@
       </div>
       <div class="container mt-7 mt-md-6">
         <div class="section-title text-center mt-5">
-          <h4 class="fw-600 text-dark"> قيمنا </h4>
+          <h4 class="fw-600 text-dark" data-aos="fade-up"> قيمنا </h4>
         </div>
 
         <div class="py-4 row">
