--- a/contact.html
+++ b/contact.html
@@ -260,20 +260,20 @@
               <!-- Full Name -->
               <div class="col-lg-6 mb-4">
                 <label class="fw-500 mb-2" for="name">الاسم الكامل</label>
-                <input type="text" class="form-control rounded-2" placeholder="ادخل اسمك الكامل" name="name" id="name">
+                <input type="text" class="form-control rounded-2" placeholder="ادخل اسمك الكامل" name="name" id="name" required>
               </div>
 
               <!-- Email -->
               <div class="col-lg-6 mb-4">
                 <label class="fw-500 mb-2" for="email">البريد الإلكتروني</label>
-                <input type="email" class="form-control rounded-2" placeholder="ادخل بريدك الإلكتروني" name="email" id="email">
+                <input type="email" class="form-control rounded-2" placeholder="ادخل بريدك الإلكتروني" name="email" id="email" required>
               </div>
 
               <!-- Phone Number -->
               <div class="col-lg-12 mb-4">
                 <label class="fw-500 mb-2" for="phone">رقم الهاتف</label>
                 <div class="phone-input" >
-                <input type="tel" class="form-control rounded-2 phone" placeholder="ادخل رقم الهاتف" name="phone" id="phone">
+                <input type="tel" class="form-control rounded-2 phone" placeholder="ادخل رقم الهاتف" name="phone" id="phone" required>
               </div>
               </div>
 
