--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                   <div class="testimonial-slide d-flex row">
                     
                       <div class="col-md-4 py-6">
-                          <div class="testimonial-card border-0 bg-white rounded-3 shadow-sm card h-100 position-relative">
+                          <div class="testimonial-card border-0 bg-white rounded-3 shadow-sm mx-2 mx-md-0 card h-100 position-relative">
                               <!-- Quote Icon Positioned -->
                               <div class="quote-icon text-white rounded-circle d-inline-flex align-items-center justify-content-center position-absolute">
                                   <span class="mb-2">
@@ -582,7 +582,7 @@
                           </div>
                       </div>
                       <div class="col-md-4 py-6">
-                          <div class="testimonial-card border-0 bg-white rounded-3 shadow-sm card h-100 position-relative">
+                          <div class="testimonial-card border-0 bg-white rounded-3 shadow-sm mx-2 mx-md-0 card h-100 position-relative">
                               <!-- Quote Icon Positioned -->
                               <div class="quote-icon text-white rounded-circle d-inline-flex align-items-center justify-content-center position-absolute">
                                   <span class="mb-2">
@@ -604,7 +604,7 @@
                       </div>
           
                       <div class="col-md-4 py-6">
-                          <div class="testimonial-card border-0 bg-white rounded-3 shadow-sm card h-100 position-relative">
+                          <div class="testimonial-card border-0 bg-white rounded-3 shadow-sm mx-2 mx-md-0 card h-100 position-relative">
                               <!-- Quote Icon Positioned -->
                               <div class="quote-icon text-white rounded-circle d-inline-flex align-items-center justify-content-center position-absolute">
                                   <span class="mb-2">
@@ -625,7 +625,7 @@
                           </div>
                       </div>
                       <div class="col-md-4 py-6">
-                          <div class="testimonial-card border-0 bg-white rounded-3 shadow-sm card h-100 position-relative">
+                          <div class="testimonial-card border-0 bg-white rounded-3 shadow-sm mx-2 mx-md-0 card h-100 position-relative">
                               <!-- Quote Icon Positioned -->
                               <div class="quote-icon text-white rounded-circle d-inline-flex align-items-center justify-content-center position-absolute">
                                   <span class="mb-2">
